fix: fix swagger
