# docs/swagger.yaml
@@ -273,49 +273,6 @@ paths:
       tags:
       - Create Maintenance Project
   /projects/:
-    patch:
-      consumes:
-      - application/json
-      description: API Endpoint for editing a project from the website
-      parameters:
-      - description: project id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Fill with project details
-        in: body
-        name: editProject
-        required: true
-        schema:
-          $ref: '#/definitions/model.EditProjectRequest'
-      - description: Bearer Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Project'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/common.APIError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/common.APIError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/common.APIError'
-      summary: Edit a project
-      tags:
-      - Edit Project
     post:
       consumes:
       - application/json
@@ -392,6 +349,49 @@ paths:
       summary: Delete a project
       tags:
       - Delete Project
+    patch:
+      consumes:
+      - application/json
+      description: API Endpoint for editing a project from the website
+      parameters:
+      - description: project id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Fill with project details
+        in: body
+        name: editProject
+        required: true
+        schema:
+          $ref: '#/definitions/model.EditProjectRequest'
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Project'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.APIError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/common.APIError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.APIError'
+      summary: Edit a project
+      tags:
+      - Edit Project
   /projects/client/view:
     get:
       consumes:
@@ -434,9 +434,9 @@ paths:
       - application/json
       description: API Endpoint for searching project in website
       parameters:
-      - description: searchProject
-        in: path
-        name: searchProject
+      - description: Project that want to be searched
+        in: query
+        name: projectName
         required: true
         type: string
       - description: Bearer Token
